added blog , blog details and fix some error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15459,7 +15459,7 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
 }
 
 .bg-one {
-  background: url(../images/banner/banner-slider-bg-01.webp);
+  background: url(../images/7.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
